Added home, detail and almost polished the whole project

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Analytics DGR</title>
+    <title>Analytics DGR's Blog</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -28,43 +26,28 @@
               <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link" href="#">Twitter</a>
                 <a class="nav-item nav-link" href="{% static 'Daniel_Resume.pdf' %}">Resume</a>
-                <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
+                <a class="nav-item nav-link active" href="{% url 'allblogs' %}">Blog</a>
               </div>
             </div>
         </nav>
     </header>
 
     <main role="main">
-
-      <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">Welcome to Analytics DGR</h1>
-          <p class="lead text-muted">Seeking for the best solution to any business problem using the most cutted-edged technologies in data gathering, processing and analysis</p>
-          <p>
-            <a href="mailto:analyticsdgr@gmail.com" class="btn btn-primary my-2">Contact me!</a>
-          </p>
-          <img src="{% static 'dani.jpg' %}" alt="dani" height="600" width="520">
+            <h1 class="text-center pt-2">Blog</h1>
+            <br>
+            <br>
+            <h2>Latest Posts</h2>
+            <hr>
+                {% for blog in blogs.all %}
+                <a href="{% url 'detail' blog.id %}"><h3>{{ blog.title }}</h3></a>
+                <h4>{{ blog.pub_date_pretty }}</h4>
+                <br>
+                <img class=".img-fluid" src="{{ blog.image.url}}" height=200 width=200 />
+                <br>
+                <p class=".text-right">{{ blog.body_summary }}</p>
+                {% endfor %}
         </div>
-      </section>
-
-      <div class="album py-5 bg-light">
-        <div class="container">
-
-          <div class="row">
-            {% for job in jobs.all %}
-            <div class="col-md-4">
-              <div class="card mb-4 shadow-sm">
-                <img class="card-img-top" src="{{ job.image.url}}"/>
-                <div class="card-body">
-                  <p class="card-text">{{ job.summary }}</p>
-                </div>
-              </div>
-            </div>
-            {% endfor %}
-          </div>
-        </div>
-      </div>
-
     </main>
 
     <footer class="text-muted">
